Fix align for subheaders in member nav

--- a/webapp/titanembeds/static/css/embedstyle.css
+++ b/webapp/titanembeds/static/css/embedstyle.css
@@ -106,6 +106,12 @@ nav .brand-logo {
   padding-top: 10px;
 }
 
+#members-nav li>a.subheader {
+  height: fit-content;
+  line-height: initial;
+  padding-top: 15px;
+}
+
 #guild-nav {
   background-color: var(--leftsidebar);
 }
